Bug 1317266 - Transition ServiceWorker instances when the SW changes states instead of just invalidating them. r=bkelly